# english-to-katakana

./: README.md  pyproject.toml
english_to_katakana/: __main__.py  main.py  resource.py  transliterate.py
tests/: test_transliterate.py
